label and contrast correction

--- a/Sass/Utils/_Variables.scss
+++ b/Sass/Utils/_Variables.scss
@@ -1,4 +1,4 @@
 $color-primary:#fff;
-$color-secondary: #f8844f;
+$color-secondary: #b9643d;
 $color-tertiaire:#313131;
 $color-input:  rgb(141, 139, 139)
